--- a/pod/pod.yaml
+++ b/pod/pod.yaml
@@ -1,5 +1,5 @@
-apiversion: v1
-kind: pod
+apiVersion: v1
+kind: Pod
 metadata:
   name: nginx
 spec:
@@ -7,4 +7,4 @@ spec:
   - name: nginx
     image: nginx:1.14.2
     ports:
-    - containerPort: 8081
+    - containerPort: 80
