--- a/pod/mutliple.yaml
+++ b/pod/mutliple.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: pod
 metadata:
- name: multiple
+  name: multiple
 spec:
- containers:
- - image: nginx
-   name: nginx
- - image: almalinux
-   name: alamalinux
-   command: ["sleep","20"]
+  containers:
+  - image: nginx
+    name: nginx
+    ports:
+      containerport: 80
+  - image: almalinux
+    name: alamalinux
+  command: ["sleep","20"]
